[tool.poetry]
name = "XAPI"
version = "0.1.0"
description = ""
authors = ["Leorio Paradinight <62891774+code-rgb@users.noreply.github.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.65.2"}
aiohttp = "^3.7.4"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
uvloop = {version = "^0.15.2", platform = "linux"}
python-dotenv = "^0.18.0"
feedparser = "^6.0.8"
motor = "^2.4.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
